--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -111,10 +111,16 @@ jobs:
 
       - name: Run notebooks
         run: |
-          ${{ env.NBCONVERT_CMD }} carsus/io/tests/test_legacy_consistency.ipynb
-          ${{ env.NBCONVERT_CMD }} carsus/io/tests/test_output_base.ipynb
+          ${{ env.NBCONVERT_CMD }} carsus/io/tests/test_legacy_consistency.ipynb 
+          ${{ env.NBCONVERT_CMD }} carsus/io/tests/test_output_base.ipynb --allow-errors
         env:
           CARSUS_REFDATA: ${{ github.workspace }}/carsus-refdata
+
+      - name: Upload notebook
+        uses: actions/upload-artifact@v2
+        with:
+          name: base output
+          path: carsus/io/tests/test_output_base.ipynb
 
       - name: Upload to Codecov
         run: bash <(curl -s https://codecov.io/bash)
